--- a/readme
+++ b/readme
@@ -1,9 +1,13 @@
+#Hololive Cape Pack
+
+This pack has nothing to do with Hololive Production or cover
+
+このパックはHololive Production及びCoverとは一切関係はございません
+
 When updating the version of this pack, you will need to delete the 
 “%localappdata%PackagesMicrosoft.MinecraftUWP_8wekyb3d8bbweLocalState\gamescom.mojang_resource_packs”
-in the Delete the file named “HololiveTex” and then open mcpack
+in the Delete the file named “HololiveCape” and then open mcpack
 
 このパックをアップデートする際は
 "%localappdata%PackagesMicrosoft.MinecraftUWP_8wekyb3d8bbweLocalState\gamescom.mojang_resource_packs”
-の"HololiveTex"というファイルを削除してからmcpackを開いてください
-
-こんなもん書いても誰も見ないだろうけどね！！！
+の"HololiveCape"というファイルを削除してからmcpackを開いてください
